  - Add LS.other_config:broadcast-arps-to-all-routers. If false then arp
    requests are only send to Logical Routers on that Logical Switch if the
    target mac address matches. Arp requests matching no Logical Router will
    only be forwarded to non-router ports. Default is true which keeps the
    existing behaviour of flooding these arp requests to all attached Ports.

OVN v23.03.0 - 03 Mar 2023
--------------------------
  - ovn-controller: Experimental support for co-hosting multiple controller
    instances on the same host.
  - Add ovn-ctl commands for (re)starting/stopping OVSDB relay for OVN SB DB.
  - Add new ovn-db@.service systemd unit to run ovsdb-servers in separate
    systemd units.

OVN v22.12.0 - 16 Dec 2022
--------------------------
  - Add load balancer "affinity_timeout" option to configure load balancing
    of traffic from a particular client to the same backend for a given
    period of time.
  - ovn-northd: Add configuration knobs to enable drop sampling using OVS's
    per-flow IPFIX sampling.
  - Add support for component templates within logical flows and load
    balancers.
  - Add support for remote port mirroring (Experimental).
  - Add new OVN IC Route table index. This index ensures no duplicate routes
    can be advertized.  When upgrading to this version user must ensure that
    all ovn-ic daemons in all availability zones are upgraded before ovn-ic SB
    database schema is converted.

OVN v22.09.0 - 16 Sep 2022
--------------------------
  - ovn-controller: Add configuration knob, through OVS external-id
    "ovn-encap-df_default" to enable or disable tunnel DF flag.
  - Add option "localnet_learn_fdb" to LSP that will allow localnet
    ports to learn MAC addresses and store them in FDB table.
  - northd: introduce the capability to automatically deploy a load-balancer
    on each logical-switch connected to a logical router where the
    load-balancer has been installed by the CMS. In order to enable the